--- a/src/main/resources/templates/insertPage.html
+++ b/src/main/resources/templates/insertPage.html
@@ -10,7 +10,8 @@
 
 <div style="width:800px;height:100%;margin-left:270px;">
     <form action="/insert" method="post">
-        ip：<input class="form-control" type="text" name="ip"><br>
+        ip：<input class="form-control" type="text" th:value="${ip.ip}" name="ip"><br>
+        IP属地：<input class="form-control" type="text" th:value="${ip.address}" name="address"><br>
         备注：<input class="form-control" type="text" name="comment"><br>
         <button class="btn btn-primary btn-lg btn-block">保存</button>
     </form>
