--- a/src/main/resources/templates/updatePage.html
+++ b/src/main/resources/templates/updatePage.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<div style="width:800px;height:100%;margin-left:270px;">
+<div th:replace="header :: header"></div>
+<div style="width:800px;height:100%;margin-left:270px;margin-top:80px;">
     <form action="/update" method="post">
         IP：<input class="form-control"  type="text" th:value="${ip.ip}" name="ip" readonly="readonly"><br>
         IP属地：<input class="form-control" type="text" th:value="${ip.address}" name="address"><br>
